// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`automatically dispatch action object returned from thunk: 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": Object {},
    "url": "/second",
  },
]
`;

exports[`automatically dispatch action object returned from thunk: 1 - history_index 1`] = `1`;

exports[`automatically dispatch action object returned from thunk: 1 - response 1`] = `
Object {
  "type": "FOO",
}
`;

exports[`automatically dispatch action object returned from thunk: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`automatically dispatch action object returned from thunk: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`automatically dispatch action object returned from thunk: 1 - routes - SECOND - onComplete 1`] = `1`;

exports[`automatically dispatch action object returned from thunk: 1 - routes - SECOND - thunk 1`] = `1`;

exports[`automatically dispatch action object returned from thunk: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "FOO",
}
`;

exports[`automatically dispatch action object returned from thunk: 1 - title 1`] = `"SECOND"`;

exports[`automatically infer non action object to be payload: 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": Object {},
    "url": "/second",
  },
]
`;

exports[`automatically infer non action object to be payload: 1 - history_index 1`] = `1`;

exports[`automatically infer non action object to be payload: 1 - response 1`] = `
Object {
  "payload": Object {
    "foo": "bar",
  },
  "type": "SECOND_COMPLETE",
}
`;

exports[`automatically infer non action object to be payload: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`automatically infer non action object to be payload: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`automatically infer non action object to be payload: 1 - routes - SECOND - onComplete 1`] = `1`;

exports[`automatically infer non action object to be payload: 1 - routes - SECOND - thunk 1`] = `1`;

exports[`automatically infer non action object to be payload: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "SECOND_COMPLETE - {\\"foo\\":\\"bar\\"}",
}
`;

exports[`automatically infer non action object to be payload: 1 - title 1`] = `"SECOND"`;
